Make sure that story cards don't have line-breaks in them

--- a/app/src/css/_board.scss
+++ b/app/src/css/_board.scss
@@ -59,19 +59,28 @@
   @include user-select(none);
   cursor: move;
 
+  &__first-line {
+    position: relative;
+  }
+
   &--ghost {
 	  background: rgba(0,0,0,0.1);
   }
 
   &__estimate {
-    float: right;
+    position: absolute;
+    right: 0;
   }
 
   &__second-line {
-    margin-top: 10px;
+    margin-top: $spacing-small;
+    min-height: 34px;
+    position: relative;
 
     .avatar {
-      float: right;
+      position: absolute;
+      right: 0;
+      top: 8px;
     }
   }
 
@@ -79,6 +88,7 @@
     display: inline-block;
     width: 90%;
     overflow: hidden;
+    white-space: nowrap;
 
     &__item {
       display: inline-block;
@@ -90,7 +100,7 @@
       font-size: 12px;
       border: 1px solid $border-grey;
       border-radius: 3px;
-      line-height: 17px;
+      line-height: 18px;
     }
   }
 }
